manifests/default/vault-warden/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vault-warden
  labels:
    app: vault-warden
spec:
  revisionHistoryLimit: 1
  replicas: 1
  selector:
    matchLabels:
      app: vault-warden
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: vault-warden
    spec:
      containers:
      - image: vaultwarden/server:latest
        name: vault-warden
        volumeMounts:
        - name: data
          mountPath: /data
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 1
            memory: 256Mi
            ephemeral-storage: 64Mi
          requests:
            cpu: 10m
            memory: 64Mi
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: vault-warden-data
          readOnly: false
