manifests/default/vault-warden/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vault-warden
spec:
  selector:
    app: vault-warden
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30003
  type: NodePort
