manifests/default/vault-warden/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: vault-warden
spec:
  entryPoints:
    - web
    - websecure
  routes:
  - kind: Rule
    match: Host(`vault.senk0.com`)
    priority: 10
    middlewares:
    services:
    - kind: Service
      name: vault-warden
      namespace: default
      passHostHeader: true
      port: 80
  tls:
    secretName: senk0
